[package]
name = "pokemon-ws-server"
version = "0.1.0"
authors = ["András El Koulali <deak311andris@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.15"
log = "0.4.14"
pretty_env_logger = "0.4.0"
serde = { version="1.0.126", features=["derive"] }
serde_json = "1.0.64"
tokio = { version="1.7.0", features=["full"] }
tokio-tungstenite = "0.14.0"
warp = "0.3.1"
pokemon-engine = {path = "../engine"}
rand = "0.8.4"
lazy_static = "1.4.0"
